--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
     "dxf-writer": "^1.6.0",
+    "express": "^4.19.2",
     "nodemailer": "^6.9.15",
     "pdfkit": "^0.13.0",
-    "qrcode": "^1.5.3",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.16.3",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
