--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.936.0",
     "cors": "^2.8.5",
     "dxf-writer": "^1.6.0",
     "express": "^4.19.2",
