--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "jspdf": "^3.0.4",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
